--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <!-- 1. Load libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -16,6 +19,12 @@
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
+      System.config({
+          defaultJSExtensions: true,
+          map: {
+              'ng2-bs3-modal': 'node_modules/ng2-bs3-modal'
+          }
+      });
     </script>
   </head>
   <!-- 3. Display the application -->
