--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="bootstrap.css">
     <!-- 1. Load libraries -->
+    <script src="https://static.ting.com/static/lib/svg4everybody/svg4everybody-2.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
      <!-- Polyfill(s) for older browsers -->
@@ -18,6 +19,7 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
+      svg4everybody();
       System.import('app').catch(function(err){ console.error(err); });
       System.config({
           defaultJSExtensions: true,
